fix: modal styling, layout shift from scroll-lock

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -38,9 +38,9 @@
   *[data-highlighted]:not(:hover) {
     @apply !outline-none focus:outline-2 focus:outline-white focus:ring-2 focus:ring-blue-500 focus:ring-offset-2;
   }
-  /* ? hack to stop the scrollbar being hidden when a modal is open */
+  /* ? hack to stop the scrollbar being hidden when a modal is open, causes shift from the padding that Radix adds when scroll is hidden */
   /* body[data-scroll-locked][data-scroll-locked] {
-    overflow: auto !important;
+    overflow-y: scroll !important;
   } */
 }
 
